--- a/src/app/components/employee/employee-read/employee-read.component.html
+++ b/src/app/components/employee/employee-read/employee-read.component.html
@@ -1,4 +1,3 @@
-<h2>Colaboradores Cadastrados</h2>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <ng-container matColumnDef="Nome">
@@ -17,22 +16,18 @@
   
     <ng-container matColumnDef="Cargo Ocupado">
       <th mat-header-cell *matHeaderCellDef> Cargo Ocupado </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.position.name}} </td>
     </ng-container>
   
     <ng-container matColumnDef="Ações">
       <th mat-header-cell *matHeaderCellDef> Ações </th>
       <td mat-cell *matCellDef="let element"> 
-        <a href="/employee/update/{{ element.id }}" clas="edit">
-            <i class="material-icons">
-                edit
-            </i>
-        </a>
-        <a href="/employee/delete/{{ element.id }}" clas="delete">
-            <i class="material-icons">
-                delete
-            </i>
-        </a>
+        <button mat-fab (click)="edit(element.id)" class="button_edit">
+          <mat-icon class="edit">edit</mat-icon>
+        </button>
+        <button mat-fab (click)="openDialog(element)">
+          <mat-icon class="delete">delete</mat-icon>
+        </button>
       </td>
     </ng-container>
   
