--- a/src/app/components/employee/employee-create/employee-create.component.html
+++ b/src/app/components/employee/employee-create/employee-create.component.html
@@ -33,13 +33,12 @@
       </div>
   
       <div class="form-buttons">
-        <button mat-raised-button color="primary" (click)="createUser()">
+        <button mat-flat-button color="warn" (click)="createUser()">
           Salvar
         </button>
-        <button mat-stroked-button color="warn" (click)="cancel()">
+        <button mat-stroked-button color="primary" (click)="cancel()">
           Cancelar
         </button>
       </div>
     </form>
   </mat-card>
-  
