--- a/src/app/components/employee/employee-read/employee-read.component.html
+++ b/src/app/components/employee/employee-read/employee-read.component.html
@@ -1,38 +1,40 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="Nome">
-      <th mat-header-cell *matHeaderCellDef> Nome </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
-  
-    <th>Número da Matrícula</th>
-    <th>Cargo Ocupado</th>
-    <th>Ações</th>
+<mat-card>
+  <div class="table-scroll-container">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="Nome">
+        <th mat-header-cell *matHeaderCellDef> Nome </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="Número da Matrícula">
-      <th mat-header-cell *matHeaderCellDef> Número da Matrícula </th>
-      <td mat-cell *matCellDef="let element"> {{element.registration_number}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="Cargo Ocupado">
-      <th mat-header-cell *matHeaderCellDef> Cargo Ocupado </th>
-      <td mat-cell *matCellDef="let element"> {{element.position.name}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="Ações">
-      <th mat-header-cell *matHeaderCellDef> Ações </th>
-      <td mat-cell *matCellDef="let element"> 
-        <button mat-fab (click)="edit(element.id)" class="button_edit">
-          <mat-icon class="edit">edit</mat-icon>
-        </button>
-        <button mat-fab (click)="openDialog(element)">
-          <mat-icon class="delete">delete</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  
-  
+      <th>Número da Matrícula</th>
+      <th>Cargo Ocupado</th>
+      <th>Ações</th>
+
+      <ng-container matColumnDef="Número da Matrícula">
+        <th mat-header-cell *matHeaderCellDef> Número da Matrícula </th>
+        <td mat-cell *matCellDef="let element"> {{element.registration_number}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Cargo Ocupado">
+        <th mat-header-cell *matHeaderCellDef> Cargo Ocupado </th>
+        <td mat-cell *matCellDef="let element"> {{element.position.name}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Ações">
+        <th mat-header-cell *matHeaderCellDef> Ações </th>
+        <td mat-cell *matCellDef="let element"> 
+          <button mat-fab (click)="edit(element.id)" class="button_edit">
+            <mat-icon class="edit">edit</mat-icon>
+          </button>
+          <button mat-fab (click)="openDialog(element)">
+            <mat-icon class="delete">delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
+</mat-card>
