--- a/src/app/components/employee/employee-update/employee-update.component.html
+++ b/src/app/components/employee/employee-update/employee-update.component.html
@@ -34,12 +34,12 @@
       </div>
   
       <div class="form-buttons">
-        <button mat-raised-button color="primary" (click)="employeeUpdate()">
-          Atualizar
-        </button>
-        <button mat-stroked-button color="warn" (click)="cancel()">
-          Cancelar
-        </button>
+        <button mat-flat-button color="warn" (click)="employeeUpdate()">
+            Atualizar
+          </button>
+          <button mat-stroked-button color="primary" (click)="cancel()">
+            Cancelar
+          </button>
       </div>
     </form>
   </mat-card>
