--- a/src/app/components/template/footer/footer.component.css
+++ b/src/app/components/template/footer/footer.component.css
@@ -16,7 +16,7 @@
 
 .footer {
     width: 100%;
-    height: 100px;
+    height: 12vh;
     background-color: black;
     color: white;
     display: flex;
