--- a/src/app/views/employee-crud/employee-crud.component.html
+++ b/src/app/views/employee-crud/employee-crud.component.html
@@ -1,4 +1,4 @@
-<button mat-raised-button (click)="navigateToEmployeeCreate()" color="primary">
+<button mat-flat-button color="warn" (click)="navigateToEmployeeCreate()" color="primary">
     Novo Colaborador
 </button>
 
