--- a/src/app/views/position-crud/position-crud.component.html
+++ b/src/app/views/position-crud/position-crud.component.html
@@ -1,4 +1,4 @@
-<button mat-raised-button (click)="navigateToPositonCreate()" color="primary">
+<button mat-flat-button color="warn" (click)="navigateToPositonCreate()">
     Novo Cargo
 </button>
 
