--- a/src/app/components/employee/employee-create/employee-create.component.html
+++ b/src/app/components/employee/employee-create/employee-create.component.html
@@ -33,7 +33,7 @@
       </div>
   
       <div class="form-buttons">
-        <button mat-flat-button color="warn" (click)="createUser()">
+        <button mat-flat-button color="warn" (click)="createEmployee()">
           Salvar
         </button>
         <button mat-stroked-button color="primary" (click)="cancel()">
