--- a/src/app/components/position/position-create/position-create.component.html
+++ b/src/app/components/position/position-create/position-create.component.html
@@ -1,1 +1,21 @@
-<p>position-create works!</p>
+<mat-card class="position-form-card">
+    <mat-card-title class="card-title">Novo Cargo</mat-card-title>
+  
+    <form class="position-form" autocomplete="off">
+      <div class="form-row">
+        <mat-form-field appearance="fill" class="form-field">
+            <mat-label>Nome</mat-label>
+            <input matInput [(ngModel)]="position.name" name="nome">
+        </mat-form-field>
+      </div>
+  
+      <div class="form-buttons">
+        <button mat-flat-button color="warn" (click)="createPosition()">
+          Salvar
+        </button>
+        <button mat-stroked-button color="primary" (click)="cancel()">
+          Cancelar
+        </button>
+      </div>
+    </form>
+  </mat-card>
