--- a/src/app/components/stuffing/stuffing-create/stuffing-create.component.html
+++ b/src/app/components/stuffing/stuffing-create/stuffing-create.component.html
@@ -1,1 +1,30 @@
-<p>stuffing-create works!</p>
+<div class="spinner-overlay" *ngIf="isLoading">
+  <mat-spinner></mat-spinner>
+</div>
+<mat-card class="stuffing-form-card" *ngIf="!isLoading">
+    <mat-card-title class="card-title">Novo Recheio</mat-card-title>
+  
+    <form #form="ngForm" class="stuffing-form" autocomplete="off">
+      <div class="form-row">
+        <mat-form-field appearance="fill" class="form-field">
+            <mat-label>Nome</mat-label>
+            <input matInput [(ngModel)]="stuffing.name" name="nome" required #nomeModel="ngModel">
+            <mat-error *ngIf="nomeModel.invalid && nomeModel.touched">
+              Nome é obrigatório.
+            </mat-error>
+        </mat-form-field>
+      </div>
+  
+      <div class="form-buttons">
+        <button mat-flat-button color="warn" (click)="createStuffing()" [disabled]="form.invalid">
+          Salvar
+        </button>
+        <button mat-stroked-button color="primary" (click)="cancel()">
+          Cancelar
+        </button>
+      </div>
+    </form>
+  </mat-card>
+
+  
+  
