--- a/src/app/views/pasta-crud/pasta-crud.component.html
+++ b/src/app/views/pasta-crud/pasta-crud.component.html
@@ -1,1 +1,5 @@
-<p>pasta-crud works!</p>
+<button mat-flat-button color="warn" (click)="navigateToPastaCreate()">
+    Nova Massa
+</button>
+
+<app-pasta-read></app-pasta-read>
