--- a/src/app/views/stuffing-crud/stuffing-crud.component.html
+++ b/src/app/views/stuffing-crud/stuffing-crud.component.html
@@ -1,1 +1,5 @@
-<p>stuffing-crud works!</p>
+<button mat-flat-button color="warn" (click)="navigateToStuffingCreate()">
+    Novo Recheio
+</button>
+
+<app-stuffing-read></app-stuffing-read>
