--- a/src/app/components/employee/employee-read/employee-read.component.html
+++ b/src/app/components/employee/employee-read/employee-read.component.html
@@ -1,7 +1,10 @@
 
-<mat-card>
+<div class="spinner-overlay" *ngIf="isLoading">
+  <mat-spinner></mat-spinner>
+</div>
+<mat-card class="table-card" *ngIf="!isLoading">
   <div class="table-scroll-container">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 styled-table">
       <ng-container matColumnDef="Nome">
         <th mat-header-cell *matHeaderCellDef> Nome </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -22,8 +25,8 @@
       </ng-container>
 
       <ng-container matColumnDef="Ações">
-        <th mat-header-cell *matHeaderCellDef> Ações </th>
-        <td mat-cell *matCellDef="let element"> 
+        <th mat-header-cell *matHeaderCellDef class="actions-header"> Ações </th>
+        <td mat-cell *matCellDef="let element" class="actions-cell"> 
           <button mat-fab (click)="edit(element.id)" class="button_edit">
             <mat-icon class="edit">edit</mat-icon>
           </button>
