--- a/src/app/components/employee/employee-update/employee-update.component.css
+++ b/src/app/components/employee/employee-update/employee-update.component.css
@@ -36,3 +36,15 @@
     min-width: 100px;
   }
   
+  .spinner-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(255, 255, 255, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
