--- a/src/app/components/pasta/pasta-update/pasta-update.component.html
+++ b/src/app/components/pasta/pasta-update/pasta-update.component.html
@@ -1,1 +1,29 @@
-<p>pasta-update works!</p>
+<div class="spinner-overlay" *ngIf="isLoading">
+    <mat-spinner></mat-spinner>
+  </div>
+<mat-card class="pasta-form-card" *ngIf="!isLoading">
+    <mat-card-title class="card-title">Alterar Massa</mat-card-title>
+  
+    <form #form="ngForm" class="pasta-form" autocomplete="off">
+        <div class="form-row">
+            <mat-form-field appearance="fill" class="form-field">
+                <mat-label>Nome</mat-label>
+                <input matInput [(ngModel)]="pasta.name" name="nome" required #nomeModel="ngModel">
+                <mat-error *ngIf="nomeModel.invalid && nomeModel.touched">
+                    Nome é obrigatório.
+                </mat-error>
+            </mat-form-field>
+        </div>
+  
+        <div class="form-buttons">
+            <button mat-flat-button color="warn" (click)="pastaUpdate()" [disabled]="form.invalid">
+                Atualizar
+            </button>
+            <button mat-stroked-button color="primary" (click)="cancel()">
+                Cancelar
+            </button>
+        </div>
+    </form>
+  </mat-card>
+  
+ 
