--- a/src/app/components/position/position-read/position-read.component.html
+++ b/src/app/components/position/position-read/position-read.component.html
@@ -1,15 +1,18 @@
 
-<mat-card>
+<div class="spinner-overlay" *ngIf="isLoading">
+  <mat-spinner></mat-spinner>
+</div>
+<mat-card class="table-card" *ngIf="!isLoading">
     <div class="table-scroll-container">
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 styled-table">
         <ng-container matColumnDef="Nome">
           <th mat-header-cell *matHeaderCellDef> Nome </th>
           <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
           
         <ng-container matColumnDef="Ações">
-          <th mat-header-cell *matHeaderCellDef> Ações </th>
-          <td mat-cell *matCellDef="let element"> 
+          <th mat-header-cell *matHeaderCellDef class="actions-header"> Ações </th>
+          <td mat-cell *matCellDef="let element" class="actions-cell"> 
             <button mat-fab (click)="edit(element.id)" class="button_edit">
               <mat-icon class="edit">edit</mat-icon>
             </button>
