--- a/src/app/components/stuffing/stuffing-read/stuffing-read.component.html
+++ b/src/app/components/stuffing/stuffing-read/stuffing-read.component.html
@@ -1,1 +1,28 @@
-<p>stuffing-read works!</p>
+<div class="spinner-overlay" *ngIf="isLoading">
+  <mat-spinner></mat-spinner>
+</div>
+<mat-card class="table-card" *ngIf="!isLoading">
+    <div class="table-scroll-container">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 styled-table">
+        <ng-container matColumnDef="Nome">
+          <th mat-header-cell *matHeaderCellDef> Nome </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+          
+        <ng-container matColumnDef="Ações">
+          <th mat-header-cell *matHeaderCellDef class="actions-header"> Ações </th>
+          <td mat-cell *matCellDef="let element" class="actions-cell"> 
+            <button mat-fab (click)="edit(element.id)" class="button_edit">
+              <mat-icon class="edit">edit</mat-icon>
+            </button>
+            <button mat-fab (click)="openDialog(element)">
+              <mat-icon class="delete">delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+  
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+  </mat-card>
