--- a/src/app/components/employee/employee-read/employee-read.component.html
+++ b/src/app/components/employee/employee-read/employee-read.component.html
@@ -6,8 +6,8 @@
   <div class="table-scroll-container">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 styled-table">
       <ng-container matColumnDef="Nome">
-        <th mat-header-cell *matHeaderCellDef> Nome </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <th mat-header-cell *matHeaderCellDef class="name-header"> Nome </th>
+        <td mat-cell *matCellDef="let element" class="name-cell"> {{element.name}} </td>
       </ng-container>
 
       <th>Número da Matrícula</th>
