--- a/src/app/components/position/position-read/position-read.component.css
+++ b/src/app/components/position/position-read/position-read.component.css
@@ -67,6 +67,12 @@
   padding: 8px;
 }
 
+.name-header,
+.name-cell {
+max-width: 275px;
+width: 275px;
+}
+
 .spinner-overlay {
   position: fixed;
   top: 0;
