add crud production daily record

--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -31,6 +31,12 @@
                 </i>
                 Recheios
             </a>
+            <a mat-list-item routerLink="records">
+                <i class="material-icons">
+                    article
+                </i>
+                Registros
+            </a>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="content">
