--- a/src/app/components/production-daily-record/production-daily-record-detail/production-daily-record-detail.component.html
+++ b/src/app/components/production-daily-record/production-daily-record-detail/production-daily-record-detail.component.html
@@ -1,1 +1,138 @@
-<p>production-daily-record-detail works!</p>
+  <div class="spinner-overlay" *ngIf="isLoading">
+    <mat-spinner></mat-spinner>
+  </div>
+  
+  <div *ngIf="!isLoading" class="production-container">
+    <section class="header-section">
+      <h1>Registro Diário de Produção</h1>
+      <h3>Autor: {{ record.author.name }}</h3>
+      <h3>Líder de Produção: {{ record.production_leader.name }}</h3>
+      <h3>Data: {{ formateDate(record.date) }}</h3>
+    </section>
+  
+    <mat-card class="table-card">
+      <mat-card-title>Massas</mat-card-title>
+      <div class="table-scroll-container">
+        <table mat-table [dataSource]="dataSourceFinishedPastas" class="mat-elevation-z2 styled-table">
+          <ng-container matColumnDef="Massa">
+            <th mat-header-cell *matHeaderCellDef> Massa </th>
+            <td mat-cell *matCellDef="let element"> {{ element.finished_pasta?.name }} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="Quantidade">
+            <th mat-header-cell *matHeaderCellDef> Quantidade </th>
+            <td mat-cell *matCellDef="let element"> {{ valor(element.quantity) }} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="Desperdicio">
+            <th mat-header-cell *matHeaderCellDef> Desperdício </th>
+            <td mat-cell *matCellDef="let element"> {{ valor(element.waste) }} </td>
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsFinishedPastas"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsFinishedPastas;"></tr>
+        </table>
+      </div>
+    </mat-card>
+  
+    <mat-card class="table-card">
+      <mat-card-title>Massas em Elaboração</mat-card-title>
+      <div class="table-scroll-container">
+        <table mat-table [dataSource]="dataSourceInProgressPastas" class="mat-elevation-z2 styled-table">
+          <ng-container matColumnDef="Colaborador">
+            <th mat-header-cell *matHeaderCellDef> Colaborador </th>
+            <td mat-cell *matCellDef="let element"> {{ element.employee?.name }} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="Massa">
+            <th mat-header-cell *matHeaderCellDef> Massa </th>
+            <td mat-cell *matCellDef="let element"> {{ element.in_progress_pasta?.name }} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="Quantidade">
+            <th mat-header-cell *matHeaderCellDef> Quantidade </th>
+            <td mat-cell *matCellDef="let element"> {{ valor(element.quantity) }} </td>
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsInProgressPastas"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsInProgressPastas;"></tr>
+        </table>
+      </div>
+    </mat-card>
+  
+    <mat-card class="table-card">
+      <mat-card-title>Masseiras</mat-card-title>
+      <div class="table-scroll-container">
+        <table mat-table [dataSource]="dataSourcePastaMachineUsages" class="mat-elevation-z2 styled-table">
+          <ng-container matColumnDef="Colaborador">
+            <th mat-header-cell *matHeaderCellDef> Colaborador </th>
+            <td mat-cell *matCellDef="let element"> {{ element.employee?.name }} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="Masseiras">
+            <th mat-header-cell *matHeaderCellDef> Masseiras </th>
+            <td mat-cell *matCellDef="let element"> {{ valor(element.machine) }} </td>
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsPastaMachineUsages"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsPastaMachineUsages;"></tr>
+        </table>
+      </div>
+    </mat-card>
+  
+    <mat-card class="table-card">
+      <mat-card-title>Cozimento</mat-card-title>
+      <div class="table-scroll-container">
+        <table mat-table [dataSource]="dataSourceCookedPastas" class="mat-elevation-z2 styled-table">
+          <ng-container matColumnDef="Colaborador">
+            <th mat-header-cell *matHeaderCellDef> Colaborador </th>
+            <td mat-cell *matCellDef="let element"> {{ element.employee?.name }} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="Cozimento">
+            <th mat-header-cell *matHeaderCellDef> Cozimento </th>
+            <td mat-cell *matCellDef="let element"> {{ element.pasta_cooking?.name }} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="Quantidade">
+            <th mat-header-cell *matHeaderCellDef> Quantidade </th>
+            <td mat-cell *matCellDef="let element"> {{ valor(element.quantity) }} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="Descarte">
+            <th mat-header-cell *matHeaderCellDef> Descarte </th>
+            <td mat-cell *matCellDef="let element"> {{ valor(element.discard) }} </td>
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsCookedPastas"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsCookedPastas;"></tr>
+        </table>
+      </div>
+    </mat-card>
+  
+    <mat-card class="table-card">
+      <mat-card-title>Recheio</mat-card-title>
+      <div class="table-scroll-container">
+        <table mat-table [dataSource]="dataSourcePastaStuffings" class="mat-elevation-z2 styled-table">
+          <ng-container matColumnDef="Colaborador">
+            <th mat-header-cell *matHeaderCellDef> Colaborador </th>
+            <td mat-cell *matCellDef="let element"> {{ element.employee?.name }} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="Recheio">
+            <th mat-header-cell *matHeaderCellDef> Recheio </th>
+            <td mat-cell *matCellDef="let element"> {{ element.stuffing?.name }} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="Receitas">
+            <th mat-header-cell *matHeaderCellDef> Receitas </th>
+            <td mat-cell *matCellDef="let element"> {{ valor(element.recipes) }} </td>
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsPastaStuffings"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsPastaStuffings;"></tr>
+        </table>
+      </div>
+    </mat-card>
+  </div>
+  
