--- a/src/app/views/production-daily-record-crud/production-daily-record-crud.component.html
+++ b/src/app/views/production-daily-record-crud/production-daily-record-crud.component.html
@@ -2,4 +2,9 @@
     Novo Registro
 </button>
 
+
+<h1 class="header-section">
+    Bem vindo à Plataforma de Registro Diário de Produção
+</h1>
+
 <app-production-daily-record-read></app-production-daily-record-read>
