--- a/src/app/components/production-daily-record/production-daily-record-detail/production-daily-record-detail.component.html
+++ b/src/app/components/production-daily-record/production-daily-record-detail/production-daily-record-detail.component.html
@@ -13,7 +13,7 @@
     <mat-card class="table-card">
       <mat-card-title>Massas</mat-card-title>
       <div class="table-scroll-container">
-        <table mat-table [dataSource]="dataSourceFinishedPastas" class="mat-elevation-z2 styled-table">
+        <table mat-table [dataSource]="record.finished_pastas" class="mat-elevation-z2 styled-table">
           <ng-container matColumnDef="Massa">
             <th mat-header-cell *matHeaderCellDef> Massa </th>
             <td mat-cell *matCellDef="let element"> {{ element.finished_pasta?.name }} </td>
@@ -38,7 +38,7 @@
     <mat-card class="table-card">
       <mat-card-title>Massas em Elaboração</mat-card-title>
       <div class="table-scroll-container">
-        <table mat-table [dataSource]="dataSourceInProgressPastas" class="mat-elevation-z2 styled-table">
+        <table mat-table [dataSource]="record.in_progress_pastas" class="mat-elevation-z2 styled-table">
           <ng-container matColumnDef="Colaborador">
             <th mat-header-cell *matHeaderCellDef> Colaborador </th>
             <td mat-cell *matCellDef="let element"> {{ element.employee?.name }} </td>
@@ -63,7 +63,7 @@
     <mat-card class="table-card">
       <mat-card-title>Masseiras</mat-card-title>
       <div class="table-scroll-container">
-        <table mat-table [dataSource]="dataSourcePastaMachineUsages" class="mat-elevation-z2 styled-table">
+        <table mat-table [dataSource]="record.pasta_machine_usages" class="mat-elevation-z2 styled-table">
           <ng-container matColumnDef="Colaborador">
             <th mat-header-cell *matHeaderCellDef> Colaborador </th>
             <td mat-cell *matCellDef="let element"> {{ element.employee?.name }} </td>
@@ -83,7 +83,7 @@
     <mat-card class="table-card">
       <mat-card-title>Cozimento</mat-card-title>
       <div class="table-scroll-container">
-        <table mat-table [dataSource]="dataSourceCookedPastas" class="mat-elevation-z2 styled-table">
+        <table mat-table [dataSource]="record.cooked_pastas" class="mat-elevation-z2 styled-table">
           <ng-container matColumnDef="Colaborador">
             <th mat-header-cell *matHeaderCellDef> Colaborador </th>
             <td mat-cell *matCellDef="let element"> {{ element.employee?.name }} </td>
@@ -113,7 +113,7 @@
     <mat-card class="table-card">
       <mat-card-title>Recheio</mat-card-title>
       <div class="table-scroll-container">
-        <table mat-table [dataSource]="dataSourcePastaStuffings" class="mat-elevation-z2 styled-table">
+        <table mat-table [dataSource]="record.pasta_stuffings" class="mat-elevation-z2 styled-table">
           <ng-container matColumnDef="Colaborador">
             <th mat-header-cell *matHeaderCellDef> Colaborador </th>
             <td mat-cell *matCellDef="let element"> {{ element.employee?.name }} </td>
