--- a/src/app/components/production-daily-record/production-daily-record-read/production-daily-record-read.component.html
+++ b/src/app/components/production-daily-record/production-daily-record-read/production-daily-record-read.component.html
@@ -6,7 +6,7 @@
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 styled-table">
             <ng-container matColumnDef="Data">
                 <th mat-header-cell *matHeaderCellDef class="data-header"> Data </th>
-                <td mat-cell *matCellDef="let element" class="data-cell"> {{formatarDataString(element.created_at)}} </td>
+                <td mat-cell *matCellDef="let element" class="data-cell"> {{formatarDataString(element.date)}} </td>
             </ng-container>
 
             <ng-container matColumnDef="Autor">
@@ -20,18 +20,19 @@
             </ng-container>
             
             <ng-container matColumnDef="Ações">
-            <th mat-header-cell *matHeaderCellDef class="actions-header"> Ações </th>
-            <td mat-cell *matCellDef="let element" class="actions-cell">
-                <button mat-fab (click)="detail(element.id)" class="button_visibility">
-                    <mat-icon class="visibility">visibility</mat-icon>
-                </button>
-                <button mat-fab (click)="edit(element.id)" class="button_edit">
-                    <mat-icon class="edit">edit</mat-icon>
-                </button>
-                <button mat-fab (click)="openDialog(element)">
-                    <mat-icon class="delete">delete</mat-icon>
-                </button>
-            </td>
+                <th mat-header-cell *matHeaderCellDef class="actions-header"> Ações </th>
+                <td mat-cell *matCellDef="let element" class="actions-cell">
+                    
+                    <button mat-icon-button (click)="detail(element)" class="button_visibility">
+                        <mat-icon class="visibility">visibility</mat-icon>
+                    </button>
+                    <button mat-icon-button (click)="edit(element)" class="button_edit">
+                        <mat-icon class="edit">edit</mat-icon>
+                    </button>
+                    <button mat-icon-button (click)="openDialog(element)">
+                        <mat-icon class="delete">delete</mat-icon>
+                    </button>
+                </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
