--- a/src/app/components/production-daily-record/production-daily-record-read/production-daily-record-read.component.html
+++ b/src/app/components/production-daily-record/production-daily-record-read/production-daily-record-read.component.html
@@ -23,10 +23,10 @@
                 <th mat-header-cell *matHeaderCellDef class="actions-header"> Ações </th>
                 <td mat-cell *matCellDef="let element" class="actions-cell">
                     
-                    <button mat-icon-button (click)="detail(element)" class="button_visibility">
+                    <button mat-icon-button (click)="detail(element.id)" class="button_visibility">
                         <mat-icon class="visibility">visibility</mat-icon>
                     </button>
-                    <button mat-icon-button (click)="edit(element)" class="button_edit">
+                    <button mat-icon-button (click)="edit(element.id)" class="button_edit">
                         <mat-icon class="edit">edit</mat-icon>
                     </button>
                     <button mat-icon-button (click)="openDialog(element)">
