--- a/src/app/components/production-daily-record/production-daily-record-create/production-daily-record-create.component.html
+++ b/src/app/components/production-daily-record/production-daily-record-create/production-daily-record-create.component.html
@@ -62,7 +62,7 @@
                 <mat-form-field appearance="fill" class="form-field">
                     <mat-label>Massa acabada</mat-label>
                     <mat-select [(ngModel)]="selectedFinishedPasta" name="selectedFinishedPasta" #finishedModel="ngModel">                    
-                        <mat-option [value]="undefined" disabled>Selecione um autor</mat-option>
+                        <mat-option [value]="undefined" disabled>Selecione uma massa</mat-option>
                         <mat-option *ngFor="let past of pasta_list" [value]="past.id">
                             {{ past.name }}
                         </mat-option>
@@ -157,7 +157,7 @@
                 <mat-form-field appearance="fill" class="form-field">
                     <mat-label>Massa em elaboração</mat-label>
                     <mat-select [(ngModel)]="selectedInProgressPasta" name="in_progress_pasta" #inProgressModel="ngModel">                    
-                        <mat-option [value]="undefined" disabled>Selecione um autor</mat-option>
+                        <mat-option [value]="undefined" disabled>Selecione uma massa</mat-option>
                         <mat-option *ngFor="let past of pasta_list" [value]="past.id">
                             {{ past.name }}
                         </mat-option>
@@ -303,7 +303,7 @@
             </div>
             <div class="form-row">
               <mat-form-field appearance="fill" class="form-field">
-                  <mat-label>Massa acabada</mat-label>
+                  <mat-label>Massa em cozimento</mat-label>
                   <mat-select [(ngModel)]="selectedCookedPasta" name="selectedCookedPasta"  #finishedModel="ngModel">                    
                       <mat-option [value]="undefined" disabled>Selecione uma massa em cozimento</mat-option>
                       <mat-option *ngFor="let past of pasta_list" [value]="past.id">
@@ -395,7 +395,7 @@
                 <mat-form-field appearance="fill" class="form-field">
                     <mat-label>Colaborador</mat-label>
                     <mat-select [(ngModel)]="selectedStuffingEmployee" name="selectedStuffingEmployee"  #stuffingEmployeeModel="ngModel">                    
-                        <mat-option [value]="undefined" disabled>Selecione um autor</mat-option>
+                        <mat-option [value]="undefined" disabled>Selecione um colaborador</mat-option>
                         <mat-option *ngFor="let emp of employee_list" [value]="emp.id">
                             {{ emp.name }}
                         </mat-option>
@@ -406,7 +406,7 @@
               <mat-form-field appearance="fill" class="form-field">
                   <mat-label>Recheio</mat-label>
                   <mat-select [(ngModel)]="selectedStuffing" name="selectedStuffing"  #stuffingModel="ngModel">                    
-                      <mat-option [value]="undefined" disabled>Selecione um autor</mat-option>
+                      <mat-option [value]="undefined" disabled>Selecione um recheio</mat-option>
                       <mat-option *ngFor="let stf of stuffing_list" [value]="stf.id">
                           {{ stf.name }}
                       </mat-option>
