--- a/src/app/components/production-daily-record/production-daily-record-create/production-daily-record-create.component.html
+++ b/src/app/components/production-daily-record/production-daily-record-create/production-daily-record-create.component.html
@@ -13,7 +13,7 @@
                     <mat-select [(ngModel)]="record.author_id" name="author" required #autorModel="ngModel">                    
                         <mat-option [value]="undefined" disabled>Selecione um autor</mat-option>
                         <mat-option *ngFor="let emp of employee_list" [value]="emp.id">
-                            {{ emp.name }}
+                            {{ emp.name + ' - ' + emp.position.name }}
                         </mat-option>
                     </mat-select>
                     <mat-error *ngIf="autorModel.invalid && autorModel.touched">
@@ -28,7 +28,7 @@
                     <mat-select [(ngModel)]="record.production_leader_id" name="production_leader" required #prodLeaderModel="ngModel">                    
                         <mat-option [value]="undefined" disabled>Selecione um líder de produção</mat-option>
                         <mat-option *ngFor="let emp of employee_list" [value]="emp.id">
-                            {{ emp.name }}
+                            {{ emp.name + ' - ' + emp.position.name }}
                         </mat-option>
                     </mat-select>
                     <mat-error *ngIf="prodLeaderModel.invalid && prodLeaderModel.touched">
@@ -98,7 +98,7 @@
               </div>
               
             <div class="form-buttons">
-                <button mat-flat-button color="warn" (click)="addFinishedPasta()" class="add_button">
+                <button mat-flat-button color="warn" (click)="addFinishedPasta()" class="add_button" [disabled]="btnAddFinishedDisabled()">
                 Adicionar
                 </button>
             </div>
@@ -108,7 +108,7 @@
             <table mat-table [dataSource]="record.finished_pastas" class="mat-elevation-z2 styled-table">
               <ng-container matColumnDef="Massa Acabada">
                 <th mat-header-cell *matHeaderCellDef class="name-header"> Massa Acabada </th>
-                <td mat-cell *matCellDef="let element" class="name-cell"> {{ getPastaName(element)}} </td>
+                <td mat-cell *matCellDef="let element" class="name-cell"> {{ getPastaName(element.finished_pasta_id)}} </td>
               </ng-container>
         
               <ng-container matColumnDef="Quantidade">
@@ -148,7 +148,7 @@
                     <mat-select [(ngModel)]="selectedInProgressEmployee" name="in_progress_employee" #employeeInProgressModel="ngModel">                    
                         <mat-option [value]="undefined" disabled>Selecione um colaborador</mat-option>
                         <mat-option *ngFor="let emp of employee_list" [value]="emp.id">
-                            {{ emp.name }}
+                            {{ emp.name + ' - ' + emp.position.name }}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
@@ -180,7 +180,7 @@
               </div>
               
             <div class="form-buttons">
-                <button mat-flat-button color="warn" (click)="addInProgressPasta()" class="add_button">
+                <button mat-flat-button color="warn" (click)="addInProgressPasta()" class="add_button" [disabled]="btnAddInProgressDisabled()">
                 Adicionar
                 </button>
             </div>
@@ -195,7 +195,7 @@
                 
               <ng-container matColumnDef="Massa em elaboração">
                 <th mat-header-cell *matHeaderCellDef> Massa em elaboração </th>
-                <td mat-cell *matCellDef="let element"> {{ getPastaName(element) }} </td>
+                <td mat-cell *matCellDef="let element"> {{ getPastaName(element.in_progress_pasta_id) }} </td>
               </ng-container>
         
               <ng-container matColumnDef="Quantidade">
@@ -230,7 +230,7 @@
                   <mat-select [(ngModel)]="selectedMachineEmployee" name="selectedMachineEmployee" #employeeMachineModel="ngModel">                    
                       <mat-option [value]="undefined" disabled>Selecione um colaborador</mat-option>
                       <mat-option *ngFor="let emp of employee_list" [value]="emp.id">
-                          {{ emp.name }}
+                          {{ emp.name + ' - ' + emp.position.name }}
                       </mat-option>
                   </mat-select>
               </mat-form-field>
@@ -251,7 +251,7 @@
             </div>
             
             <div class="form-buttons">
-                <button mat-flat-button color="warn" (click)="addMachine()" class="add_button">
+                <button mat-flat-button color="warn" (click)="addMachine()" class="add_button" [disabled]="btnAddMachineDisabled()">
                 Adicionar
                 </button>
             </div>
@@ -296,7 +296,7 @@
                     <mat-select [(ngModel)]="selectedCookedEmployee" name="selectedCookedEmployee"  #cookedModel="ngModel">                    
                         <mat-option [value]="undefined" disabled>Selecione um colaborador</mat-option>
                         <mat-option *ngFor="let emp of employee_list" [value]="emp.id">
-                            {{ emp.name }}
+                            {{ emp.name + ' - ' + emp.position.name }}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
@@ -342,7 +342,7 @@
           </div>
                      
           <div class="form-buttons">
-              <button mat-flat-button color="warn" (click)="addCookedPasta()" class="add_button">
+              <button mat-flat-button color="warn" (click)="addCookedPasta()" class="add_button" [disabled]="btnAddCookedDisabled()">
               Adicionar
               </button>
           </div>
@@ -357,7 +357,7 @@
 
               <ng-container matColumnDef="Massa em cozimento">
                 <th mat-header-cell *matHeaderCellDef class="name-header"> Massa em cozimento </th>
-                <td mat-cell *matCellDef="let element" class="name-cell"> {{ getPastaName(element) }} </td>
+                <td mat-cell *matCellDef="let element" class="name-cell"> {{ getPastaName(element.pasta_cooking_id) }} </td>
               </ng-container>
         
               <ng-container matColumnDef="Quantidade">
@@ -397,7 +397,7 @@
                     <mat-select [(ngModel)]="selectedStuffingEmployee" name="selectedStuffingEmployee"  #stuffingEmployeeModel="ngModel">                    
                         <mat-option [value]="undefined" disabled>Selecione um colaborador</mat-option>
                         <mat-option *ngFor="let emp of employee_list" [value]="emp.id">
-                            {{ emp.name }}
+                            {{ emp.name + ' - ' + emp.position.name }}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
@@ -430,7 +430,7 @@
               </div>
               
             <div class="form-buttons">
-                <button mat-flat-button color="warn" (click)="addStuffing()" class="add_button">
+                <button mat-flat-button color="warn" (click)="addStuffing()" class="add_button" [disabled]="btnAddStuffingDisabled()">
                 Adicionar
                 </button>
             </div>
