--- a/src/app/components/production-daily-record/production-daily-record-create/production-daily-record-create.component.html
+++ b/src/app/components/production-daily-record/production-daily-record-create/production-daily-record-create.component.html
@@ -2,7 +2,7 @@
     <mat-spinner></mat-spinner>
 </div>
 <div *ngIf="!isLoading">
-    <h1>Novo Registro Diário de Produção</h1>
+    <h1 class="page-title">Novo Registro Diário de Produção</h1>
     <mat-card class="record-form-card" >
         <mat-card-title class="card-title">Registro Diário de Produção</mat-card-title>
     
