--- a/src/app/components/production-daily-record/production-daily-record-create/production-daily-record-create.component.css
+++ b/src/app/components/production-daily-record/production-daily-record-create/production-daily-record-create.component.css
@@ -2,6 +2,13 @@
     margin-bottom: 30px;
 }
 
+.page-title {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 24px;
+}
+  
+
 .record-form-card {
     max-width: 600px;
     margin: 30px auto;
